<resources>
    <string name="app_name">Baking App</string>
    <string name="action_settings">Settings</string>
    <string name="recipie_name">Name</string>
    <string name="servings">Servings :</string>
    <string name="ingredient">Ingredient</string>
    <string name="quantity">Quantity :</string>
    <string name="_50">50</string>
    <string name="g">G</string>
    <string name="title_activity_steps">StepsActivity</string>
    <string name="title_activity_steps_details">StepsDetailsActivity</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="no_network">No Network connection.</string>
    <string name="appwidget_text">Recipe Shopping List</string>
    <string name="extra_recipe">recipe_extra</string>
</resources>
