<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="6dp"
    android:layout_marginTop="@dimen/card_view_margin"
    android:layout_marginEnd="@dimen/card_view_margin"
    android:layout_marginStart="@dimen/card_view_margin"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="10dp">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="@dimen/card_view_margin">


    <TextView
        android:id="@+id/ingredient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ingredient"
        android:textColor="@color/primary_text"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textColor="@color/secondary_text"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/measure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/g"
            android:textColor="@android:color/holo_orange_light"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
    </android.support.v7.widget.CardView>